--- a/app/src/main/res/layout/activity_stop.xml
+++ b/app/src/main/res/layout/activity_stop.xml
@@ -1,4 +1,4 @@
-<!-- res/layout/activity_main.xml -->
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -33,19 +33,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
-        android:text="Retry"
+        android:text="Stop"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <FrameLayout
         android:id="@+id/TimeCountingContainer"
-        android:layout_width="204dp"
+        android:layout_width="410dp"
         android:layout_height="128dp"
         android:layout_marginTop="80dp"
         android:background="@drawable/black_rectangle"
         app:layout_constraintBottom_toTopOf="@+id/RecentShotContainer"
-        app:layout_constraintEnd_toStartOf="@+id/DiffToParContainer"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
@@ -58,7 +58,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:gravity="start|top"
-            android:text="End Time"
+            android:text="Time Counting"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
@@ -66,47 +66,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="05.14"
-            android:textSize="18sp"
             android:textColor="@android:color/black"
-            android:layout_gravity="center"/>
+            android:textSize="48sp" />
 
     </FrameLayout>
 
-    <FrameLayout
-        android:id="@+id/DiffToParContainer"
-        android:layout_width="204dp"
-        android:layout_height="128dp"
-        android:layout_marginTop="80dp"
-        android:background="@drawable/black_rectangle"
-        app:layout_constraintBottom_toTopOf="@+id/RecentShotContainer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/TimeCountingContainer"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
-
-        <!-- TextView for Diff to Par -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start|top"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:gravity="start|top"
-            android:text="Diff to Par"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
-
-        <!-- TextView for Diff to Par -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="-0.16"
-            android:textSize="18sp"
-            android:textColor="@android:color/black"
-            android:layout_gravity="center"/>
-
-    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/RecentShotContainer"
@@ -129,7 +95,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:gravity="start|top"
-            android:text="Shots"
+            android:text="Recent Shot"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
@@ -137,10 +103,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TABLE WILL BE HERE"
-            android:textSize="18sp"
+            android:layout_gravity="center"
+            android:text="03.14"
             android:textColor="@android:color/black"
-            android:layout_gravity="center"/>
+            android:textSize="48sp" />
 
     </FrameLayout>
 
@@ -148,10 +114,8 @@
         android:id="@+id/SplitTimeContainer"
         android:layout_width="204dp"
         android:layout_height="128dp"
-        android:layout_marginTop="5dp"
         android:background="@drawable/black_rectangle"
-        app:layout_constraintEnd_toEndOf="@+id/TimeCountingContainer"
-        app:layout_constraintTop_toBottomOf="@+id/RecentShotContainer">
+        tools:layout_editor_absoluteY="377dp">
 
         <!-- TextView for Avg Split -->
         <TextView
@@ -161,7 +125,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:gravity="start|top"
-            android:text="Avg Split"
+            android:text="Split Time"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
@@ -169,10 +133,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="01.14"
-            android:textSize="18sp"
             android:textColor="@android:color/black"
-            android:layout_gravity="center"/>
+            android:textSize="18sp" />
 
     </FrameLayout>
 
@@ -204,10 +168,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="2"
-            android:textSize="18sp"
             android:textColor="@android:color/black"
-            android:layout_gravity="center"/>
+            android:textSize="18sp" />
 
     </FrameLayout>
 
