--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -6,10 +6,10 @@
     <item name="shotsContainer" type="id" />
     <item name="avgSplitContainer" type="id" />
     <item name="shotCountContainer" type="id" />
-    <item name="retryButton" type="id" />
-    <item name="EndTimeContainer" type="id" />
+    <item name="stopButton" type="id" />
+    <item name="TimeCountingContainer" type="id" />
     <item name="DiffToParContainer" type="id" />
-    <item name="ShotsContainer" type="id" />
-    <item name="AvgSplitContainer" type="id" />
+    <item name="RecentShotContainer" type="id" />
+    <item name="SplitTimeContainer" type="id" />
     <item name="ShotCountContainer" type="id" />
 </resources>
