--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,9 +27,9 @@
         app:menu="@menu/bottom_nav_menu" />
 
 
-    <!-- Retry Button -->
+    <!-- Start Button -->
     <Button
-        android:id="@+id/stopButton"
+        android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
@@ -185,7 +185,7 @@
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/black_rectangle"
-        app:layout_constraintBottom_toTopOf="@+id/stopButton"
+        app:layout_constraintBottom_toTopOf="@+id/startButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DelayContainer">
