--- a/app/src/main/res/layout/activity_retry.xml
+++ b/app/src/main/res/layout/activity_retry.xml
@@ -29,7 +29,7 @@
 
     <!-- Retry Button -->
     <Button
-        android:id="@+id/stopButton"
+        android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
@@ -66,10 +66,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="05.14"
-            android:textSize="18sp"
             android:textColor="@android:color/black"
-            android:layout_gravity="center"/>
+            android:textSize="18sp" />
 
     </FrameLayout>
 
@@ -101,25 +101,25 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="-0.16"
-            android:textSize="18sp"
             android:textColor="@android:color/black"
-            android:layout_gravity="center"/>
+            android:textSize="18sp" />
 
     </FrameLayout>
 
     <FrameLayout
         android:id="@+id/RecentShotContainer"
         android:layout_width="410dp"
-        android:layout_height="159dp"
-        android:layout_marginTop="5dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="213dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="224dp"
         android:background="@drawable/black_rectangle"
-        app:layout_constraintBottom_toTopOf="@+id/SplitTimeContainer"
+        app:layout_constraintBottom_toTopOf="@+id/backbutton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TimeCountingContainer">
+        app:layout_constraintTop_toTopOf="parent">
 
         <!-- TextView for Shots -->
         <TextView
@@ -137,10 +137,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="TABLE WILL BE HERE"
-            android:textSize="18sp"
             android:textColor="@android:color/black"
-            android:layout_gravity="center"/>
+            android:textSize="18sp" />
 
     </FrameLayout>
 
@@ -169,10 +169,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="01.14"
-            android:textSize="18sp"
             android:textColor="@android:color/black"
-            android:layout_gravity="center"/>
+            android:textSize="18sp" />
 
     </FrameLayout>
 
@@ -204,12 +204,23 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="2"
-            android:textSize="18sp"
             android:textColor="@android:color/black"
-            android:layout_gravity="center"/>
+            android:textSize="18sp" />
 
     </FrameLayout>
+
+    <Button
+        android:id="@+id/backbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="87dp"
+        android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RecentShotContainer" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
