--- a/app/src/main/res/layout/activity_stop.xml
+++ b/app/src/main/res/layout/activity_stop.xml
@@ -29,7 +29,7 @@
 
     <!-- Retry Button -->
     <Button
-        android:id="@+id/stopButton"
+        android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
@@ -41,10 +41,11 @@
     <FrameLayout
         android:id="@+id/TimeCountingContainer"
         android:layout_width="410dp"
-        android:layout_height="128dp"
+        android:layout_height="0dp"
         android:layout_marginTop="80dp"
+        android:layout_marginBottom="169dp"
         android:background="@drawable/black_rectangle"
-        app:layout_constraintBottom_toTopOf="@+id/RecentShotContainer"
+        app:layout_constraintBottom_toTopOf="@+id/SplitTimeContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -78,11 +79,9 @@
         android:id="@+id/RecentShotContainer"
         android:layout_width="410dp"
         android:layout_height="159dp"
-        android:layout_marginTop="5dp"
         android:layout_marginEnd="1dp"
-        android:layout_marginBottom="5dp"
         android:background="@drawable/black_rectangle"
-        app:layout_constraintBottom_toTopOf="@+id/SplitTimeContainer"
+        app:layout_constraintBottom_toTopOf="@+id/ShotCountContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TimeCountingContainer">
@@ -112,10 +111,15 @@
 
     <FrameLayout
         android:id="@+id/SplitTimeContainer"
-        android:layout_width="204dp"
-        android:layout_height="128dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="226dp"
         android:background="@drawable/black_rectangle"
-        tools:layout_editor_absoluteY="377dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/ShotCountContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TimeCountingContainer">
 
         <!-- TextView for Avg Split -->
         <TextView
@@ -147,10 +151,7 @@
         android:background="@drawable/black_rectangle"
         app:layout_constraintBottom_toBottomOf="@+id/SplitTimeContainer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/SplitTimeContainer"
-        app:layout_constraintTop_toTopOf="@+id/SplitTimeContainer"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="@+id/SplitTimeContainer">
 
         <!-- TextView for Shot Count -->
         <TextView
