--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -6,7 +6,7 @@
     <item name="shotsContainer" type="id" />
     <item name="avgSplitContainer" type="id" />
     <item name="shotCountContainer" type="id" />
-    <item name="stopButton" type="id" />
+    <item name="startButton" type="id" />
     <item name="TimeCountingContainer" type="id" />
     <item name="DiffToParContainer" type="id" />
     <item name="RecentShotContainer" type="id" />
