--- a/app/src/main/res/layout/activity_retry.xml
+++ b/app/src/main/res/layout/activity_retry.xml
@@ -39,7 +39,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <FrameLayout
-        android:id="@+id/TimeCountingContainer"
+        android:id="@+id/UsernameContainer"
         android:layout_width="204dp"
         android:layout_height="128dp"
         android:layout_marginTop="80dp"
@@ -81,7 +81,7 @@
         android:background="@drawable/black_rectangle"
         app:layout_constraintBottom_toTopOf="@+id/RecentShotContainer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/TimeCountingContainer"
+        app:layout_constraintStart_toEndOf="@+id/UsernameContainer"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
@@ -150,7 +150,7 @@
         android:layout_height="128dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/black_rectangle"
-        app:layout_constraintEnd_toEndOf="@+id/TimeCountingContainer"
+        app:layout_constraintEnd_toEndOf="@+id/UsernameContainer"
         app:layout_constraintTop_toBottomOf="@+id/RecentShotContainer">
 
         <!-- TextView for Avg Split -->
