--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,14 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/navigation_time"
+        android:icon="@drawable/ic_time"
         android:title="Time" />
 
     <item
         android:id="@+id/navigation_profile"
+        android:icon="@drawable/ic_profile"
         android:title="Profile" />
 
     <item
         android:id="@+id/navigation_settings"
+        android:icon="@drawable/ic_settings"
         android:title="Settings" />
 
 
